--- a/app/templates/loading_page.html
+++ b/app/templates/loading_page.html
@@ -1,14 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="Refresh" content="3 ; results" />
-    <title>Loading...</title>
-    <link href="{{ url_for('static', filename='/style.css') }}" rel="stylesheet">
-</head>
+{% extends "base.html" %}
 <body>
-    <div class="loader">
-    </div>
-
+    {% block wrapper %}
+    <iframe src="https://us-east-1.sumerian.aws/d4ef821377ba42ed93c80724dc205694.scene" width="300" height="500"></iframe>
+    {% endblock %}
 </body>
 </html>
