--- a/app/templates/loading_page.html
+++ b/app/templates/loading_page.html
@@ -4,7 +4,8 @@
 <body>
     {% block wrapper %}
     <iframe src={{ iframe }}></iframe>
-
+    GraphQL endpoint: https://3r35ppqm6ne6vmnbgqkuvfvp6e.appsync-api.eu-west-1.amazonaws.com/graphql
+    GraphQL API KEY: da2-xddmigz4abfw7fj3sfptez3nnm
     {% endblock %}
 </body>
 </html>
