--- a/app/static/style.css
+++ b/app/static/style.css
@@ -21,6 +21,7 @@ h1 {
     margin-top: 0;
 }
 
+/*variables to use throughout css file*/
 :root {
     --primary: #ddd;
     --font: #333;
@@ -30,7 +31,6 @@ h1 {
     --grey: #e3e3e3;
     --dark-grey: #c7c7c7;
 }
-
 
 body {
     background: var(--background);
@@ -48,6 +48,8 @@ html {
     margin: 50px 70px;
     padding-bottom: 20px;
 }
+
+/*header at the top of the screen*/
 .clock {
     display: grid;
     position: fixed;
@@ -77,9 +79,12 @@ html {
         text-decoration: none;
         text-align: center;
         color: var(--font);
-        
         text-transform: capitalize;
     }
+/*end of header at the top of the screen*/
+
+
+
 
 /*menu bar*/
 .slide {
@@ -138,10 +143,10 @@ html {
     transition: margin-left .5s;
     width: 100%;
 }
+/*end of menu bar*/
 
 
-
-/*For clickable boxes on homepage*/
+/*Clickable boxes on homepage*/
 .main_boxes {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -176,6 +181,9 @@ html {
     background-color: var(--blue);
     text-decoration: none;
 }
+/*End of clickable boxes on homepage*/
+
+
 
 /* loading page */
 .loader {
@@ -199,6 +207,9 @@ html {
         transform: rotate(360deg);
     }
 }
+/* end of loading page */
+
+
 
 /*verification of pills*/
 .verify {
@@ -221,6 +232,8 @@ html {
     text-decoration: none;
     color: #000;
 }
+/*end of verification of pills*/
+
 
 /*Contact page*/
 .form-box {
@@ -260,6 +273,9 @@ html {
         font-family: Lato;
         text-transform: uppercase;
     }
+/*End of contact page*/
+
+
 
 /*Prescription table list*/
 table {
@@ -293,7 +309,11 @@ th {
     border-color: var(--background);
     font-size: 20px;
 }
-/*steve's image processing*/
+/*End of prescription table list*/
+
+
+
+/*Steve's image processing*/
 .top_box {
     display: grid;
     grid-template-columns: 1fr;
@@ -314,6 +334,7 @@ th {
             text-decoration: none;
         }
 
+/*this creates a "clickable" button*/
 a.buttons {
     display: inline-block;
     padding: 0.7em 1.4em;
@@ -341,8 +362,11 @@ a.buttons {
         margin: 0.4em auto;
     }
 }
+/*End of Steve's image processing*/
 
-/*Add Medication Page*/
+
+
+/*Add New User Page*/
 .form-new-user {
     width: 100%;
     padding: 20px 0;
@@ -414,8 +438,12 @@ a.buttons {
         margin: 0.4em auto;
     }
 }
+/*End of Add New User Page*/
 
-/*Add Medication Page*/
+
+
+
+/*Add New Medication Page*/
 .form-meds {
     width: 100%;
     padding: 20px 0;
@@ -471,7 +499,6 @@ a.buttons {
     }
 }
 
-/* IE11 hide native button (thanks Matt!) */
 select::-ms-expand {
     display: none;
 }
@@ -503,8 +530,10 @@ select::-ms-expand {
     -ms-word-break: normal;
     word-break: normal;
 }
+/*End of Add New Medication Page*/
 
 
+/*Alarm Popup*/
 .bg-modal {
     width: 100%;
     height: 100%;
@@ -573,3 +602,4 @@ select::-ms-expand {
     background-color: #f7f459;
     text-decoration: none;
 }
+/*End of Alarm Popup*/
